@@ -1,3 +1,7 @@
+14 June 2006: Wouter
+	- fixed crash bug when dnssec/NSEC enabled and query DNAME
+	  target did not exist.
+
 13 June 2006: Wouter
 	- created doc subdirectory for documentation.
 	- removed unused DIFF FILE MAGIC string.
